--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "polymer": "Polymer/polymer#^2.0.0",
     "app-layout": "^2.0.5",
-    "app-route": "*",
+    "app-route": "PolymerElements/app-route#^2.1.0",
     "iron-pages": "^2.1.0",
     "iron-icon": "^2.1.0",
     "iron-icons": "^2.1.1",
