--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,9 @@
     "iron-icon": "^2.1.0",
     "iron-icons": "^2.1.1",
     "paper-card": "PolymerElements/paper-card#^2.1.0",
-    "paper-button": "PolymerElements/paper-button#^2.1.0"
+    "paper-button": "PolymerElements/paper-button#^2.1.0",
+    "network-information": "jorgecasar/network-information#^1.0.0",
+    "paper-input": "PolymerElements/paper-input#^2.2.0"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
